--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
   "peerDependencies": {
-    "react": "^17.8.1",
+    "react": "17.x",
     "react-native": ">=0.60.0-rc.0 <1.0.x"
   },
   "devDependencies": {
